--- a/thesis.tex
+++ b/thesis.tex
@@ -21,18 +21,18 @@
 
 \author{Tijl}{Jappens}
 
-\supervisor{Prof.~dr.~W.~De Roeck}{}
-\president{Prof.~dr.~The~Chairman}{}
-\jurymember{Prof.~dr.~T.~Van Riet}{}
-\jurymember{Prof.~dr.~J.~Indekeu}{}
-\externaljurymember{Prof.~dr.~C.~Tauber}{Far Away}
-\externaljurymember{Prof.~dr.~S.~Cenatiempo}{Far Away}
+\supervisor{Prof.~dr.~W.~De Roeck}{KU Leuven}
+\president{Prof.~dr.~L.~da Costa Pereira}{KU Leuven}
+\jurymember{Prof.~dr.~T.~Van Riet}{KU Leuven}
+\jurymember{Prof.~dr.~J.~Indekeu}{KU Leuven}
+\externaljurymember{Prof.~dr.~C.~Tauber}{Université de Strasbourg}
+\externaljurymember{Prof.~dr.~S.~Cenatiempo}{Gran Sasso Science Institute}
 
 % Your research group within the department
 % e.g. iMinds-DistriNet, Scientific Computing Group, ...
-\researchgroup{XXXXX}
-\website{http://www.XXXXX.cs.kuleuven.be} % Leave empty to hide
-\email{tijl.jappens@kuleuven.be} % Leave empty to hide
+\researchgroup{Instituut voor theoretische fysica}
+\website{} % Leave empty to hide
+\email{tijl.jappens@hotmail.com} % Leave empty to hide
 
 \address{Celestijnenlaan 200D}
 \addresscity{B-3001 Leuven} % This is the default value. Note
