I edited the equations to fall within the borders.

--- a/myPackage.tex
+++ b/myPackage.tex
@@ -7,6 +7,7 @@
 \usepackage[X2,T1]{fontenc}
 \usepackage[normalem]{ulem}
 \usepackage{amsmath,amsthm,amssymb}
+\usepackage{resizegather}
 \usepackage{thmtools,thm-restate}
 \usepackage{bbm}
 \usepackage{hyperref}
