I splitted the introduction into two chapters.

--- a/thesis.tex
+++ b/thesis.tex
@@ -154,6 +154,7 @@
 % tex and in a directory with the given name in the chapters
 % directory.
 
+\includechapter{SPT_Intro}
 \includechapter{LoopSPT}
 \includechapter{TranslationSPT}
 
