I corrected some things in the introduction and I started writing out a conclusion.

--- a/thesis.tex
+++ b/thesis.tex
@@ -155,8 +155,10 @@
 % directory.
 
 \includechapter{SPT_Intro}
+\includechapter{Tools_For_Quantum_many_Body}
 \includechapter{LoopSPT}
 \includechapter{TranslationSPT}
+\includechapter{conclusion}
 
 %\includechapter{conclusion}
 
