--- a/allpapers.bib
+++ b/allpapers.bib
@@ -937,3 +937,39 @@
 	journal={arXiv preprint arXiv:2301.08697},
 	year={2023}
 }
+
+@article{Aasen_2022,
+	doi = {10.1103/physrevb.106.085122},
+	url = {https://doi.org/10.1103%2Fphysrevb.106.085122},
+	year = 2022,
+	month = {aug},
+	publisher = {American Physical Society ({APS})},
+	volume = {106},
+	number = {8},
+	author = {David Aasen and Zhenghan Wang and Matthew B. Hastings},
+	title = {Adiabatic paths of Hamiltonians, symmetries of topological order, and automorphism codes},
+	journal = {Physical Review B}
+}
+
+@article{Kapustin_2022,
+	doi = {10.1063/5.0085964},
+	url = {https://doi.org/10.1063%2F5.0085964},
+	year = 2022,
+	month = {sep},
+	publisher = {{AIP} Publishing},
+	volume = {63},
+	number = {9},
+	pages = {091903},
+	author = {Anton Kapustin and Nikita Sopenko},
+	title = {Local Noether theorem for quantum lattice systems and topological invariants of gapped states},
+	journal = {Journal of Mathematical Physics}
+}
+
+@misc{artymowicz2023quantization,
+	title={Quantization of the higher Berry curvature and the higher Thouless pump}, 
+	author={Adam Artymowicz and Anton Kapustin and Nikita Sopenko},
+	year={2023},
+	eprint={2305.06399},
+	archivePrefix={arXiv},
+	primaryClass={math-ph}
+}
