--- a/allpapers.bib
+++ b/allpapers.bib
@@ -356,17 +356,7 @@
 	volume = {81},
 	year = {2010}}
 
-@article{aasen2022adiabatic,
-	author = {Aasen, D. and Wang, Z. and Hastings, M.B.},
-	date-added = {2023-05-05 11:39:02 +0200},
-	date-modified = {2023-05-05 11:39:43 +0200},
-	journal = {Phys. Rev. B},
-	number = {8},
-	pages = {085122},
-	publisher = {APS},
-	title = {{Adiabatic paths of Hamiltonians, symmetries of topological order, and automorphism codes}},
-	volume = {106},
-	year = {2022}}
+
 
 @article{wen2021flow,
 	author = {Wen, X. and Qi, M. and Beaudry, A. and Moreno, J. and Pflaum, M.J. and Spiegel, D. and Vishwanath, A. and Hermele, M.},
@@ -972,4 +962,15 @@
 	eprint={2305.06399},
 	archivePrefix={arXiv},
 	primaryClass={math-ph}
+}
+
+@article{Bourne_2021,
+	doi = {10.1017/fms.2021.19},
+	url = {https://doi.org/10.1017%2Ffms.2021.19},
+	year = 2021,
+	publisher = {Cambridge University Press ({CUP})},
+	volume = {9},
+	author = {Chris Bourne and Yoshiko Ogata},
+	title = {The classification of symmetry protected topological phases of one-dimensional fermion systems},
+	journal = {Forum of Mathematics, Sigma}
 }
