--- a/thesis.tex
+++ b/thesis.tex
@@ -16,7 +16,7 @@
 % !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 %%% COVER: Settings %%%
-\title{Topological phenomena out of equilibrium}
+\title{Some classification problems of symmetry protected topological states}
 %\subtitle{Multiscale computing for Dummies}
 
 \author{Tijl}{Jappens}
