--- a/allpapers.bib
+++ b/allpapers.bib
@@ -974,3 +974,30 @@
 	title = {The classification of symmetry protected topological phases of one-dimensional fermion systems},
 	journal = {Forum of Mathematics, Sigma}
 }
+
+@article{Kitaev_2003,
+	doi = {10.1016/s0003-4916(02)00018-0},
+	url = {https://doi.org/10.1016%2Fs0003-4916%2802%2900018-0},
+	year = 2003,
+	month = {jan},
+	publisher = {Elsevier {BV}},
+	volume = {303},
+	number = {1},
+	pages = {2--30},
+	author = {A.Yu. Kitaev},
+	title = {Fault-tolerant quantum computation by anyons},
+	journal = {Annals of Physics}
+}
+
+@article{Cirac_2021,
+	doi = {10.1103/revmodphys.93.045003},
+	url = {https://doi.org/10.1103%2Frevmodphys.93.045003},
+	year = 2021,
+	month = {dec},
+	publisher = {American Physical Society ({APS})},
+	volume = {93},
+	number = {4},
+	author = {J. Ignacio Cirac and David P{\'{e}}rez-Garc{\'{\i}}a and Norbert Schuch and Frank Verstraete},
+	title = {Matrix product states and projected entangled pair states: Concepts, symmetries, theorems},
+	journal = {Reviews of Modern Physics}
+}
