--- a/allpapers.bib
+++ b/allpapers.bib
@@ -1001,3 +1001,12 @@
 	title = {Matrix product states and projected entangled pair states: Concepts, symmetries, theorems},
 	journal = {Reviews of Modern Physics}
 }
+
+@misc{tong2016lectures,
+	title={Lectures on the Quantum Hall Effect}, 
+	author={David Tong},
+	year={2016},
+	eprint={1606.06687},
+	archivePrefix={arXiv},
+	primaryClass={hep-th}
+}
